loads of stuff... updated styles, updated queries, fixed navigation option on mobile, added mobile js, and unified font sizes

--- a/css/base.css
+++ b/css/base.css
@@ -10,6 +10,10 @@ html, body {
 @font-face {font-family: "FedraSerifA-Book";src: url(/font/FedraSerifA-Book.otf);}
 @font-face {font-family: "Montserrat-Regular";src: url(/font/Montserrat-Regular.ttf);}
 
+div {
+	-webkit-tap-highlight-color: rgba(0,0,0,0);
+}
+
 body {
 	background-color: #fff;
 	font-family: "FedraSerifA-Book";
@@ -142,12 +146,18 @@ ul {
 	transform: translateY(0px);
 }
 
-#question {
-	padding-bottom: 15px;
+#question, #credit {
+	padding-bottom: 6px;
+	line-height: 1.5em;
 }
 
-#question, #credit {
+#question, #credit, #tap {
 	color: #647A82;
+}
+
+#tap{
+	padding: 0px 0 30px 0;
+	font-size: .8em;
 }
 
 p {
@@ -225,4 +235,8 @@ li {
 
 svg {
 	fill: #805da3;
+}
+
+.maker {
+	white-space: nowrap;
 }
