--- a/css/skeleton.css
+++ b/css/skeleton.css
@@ -21,53 +21,12 @@
 /* #Base 960 Grid
 ================================================== */
 
-    .container                                  { position: relative; width: 815px; margin: 0 auto; padding: 0;height:100%;}
-    .container .column,
-    .container .columns                         { float: left; display: inline; margin-left: 10px; margin-right: 10px; }
-    .row                                        { margin-bottom: 20px; }
-
-    /* Nested Column Classes */
-    .column.alpha, .columns.alpha               { margin-left: 0; }
-    .column.omega, .columns.omega               { margin-right: 0; }
-
-    /* Base Grid */
-    .container .one.column,
-    .container .one.columns                     { width: 40px;  }
-    .container .two.columns                     { width: 100px; }
-    .container .three.columns                   { width: 160px; }
-    .container .four.columns                    { width: 220px; }
-    .container .five.columns                    { width: 280px; }
-    .container .six.columns                     { width: 340px; }
-    .container .seven.columns                   { width: 400px; }
-    .container .eight.columns                   { width: 460px; }
-    .container .nine.columns                    { width: 520px; }
-    .container .ten.columns                     { width: 580px; }
-    .container .eleven.columns                  { width: 640px; }
-    .container .twelve.columns                  { width: 700px; }
-    .container .thirteen.columns                { width: 760px; }
-    .container .fourteen.columns                { width: 820px; }
-    .container .fifteen.columns                 { width: 880px; }
-    .container .sixteen.columns                 { width: 940px; }
-
-    .container .one-third.column                { width: 300px; }
-    .container .two-thirds.column               { width: 620px; }
-
-    /* Offsets */
-    .container .offset-by-one                   { padding-left: 60px;  }
-    .container .offset-by-two                   { padding-left: 120px; }
-    .container .offset-by-three                 { padding-left: 180px; }
-    .container .offset-by-four                  { padding-left: 240px; }
-    .container .offset-by-five                  { padding-left: 300px; }
-    .container .offset-by-six                   { padding-left: 360px; }
-    .container .offset-by-seven                 { padding-left: 420px; }
-    .container .offset-by-eight                 { padding-left: 480px; }
-    .container .offset-by-nine                  { padding-left: 540px; }
-    .container .offset-by-ten                   { padding-left: 600px; }
-    .container .offset-by-eleven                { padding-left: 660px; }
-    .container .offset-by-twelve                { padding-left: 720px; }
-    .container .offset-by-thirteen              { padding-left: 780px; }
-    .container .offset-by-fourteen              { padding-left: 840px; }
-    .container .offset-by-fifteen               { padding-left: 900px; }
+    @media only screen and (min-width: 960px) {
+        #tap{
+            display: none;
+            visibility: zero;
+        }
+    }
 
 
 /* #Tablet (Portrait)
@@ -104,7 +63,7 @@
 
     @media only screen and (max-width: 767px) {
         #container{
-            width: 100%;
+            width: 85%;
             margin: 0 auto;
             padding: 25px 0;
         }
@@ -119,12 +78,18 @@
         }
 
         p{
-            font-size: 1em;
+            font-size: 1.25em;
+            margin-bottom: 15px;
         }
         
+        #advice {
+            font-size: 1.2em;
+            padding-bottom: 5px;
+        }
+
         #nav {
-        margin-bottom: 75px;
-        display: block;
+            margin-bottom: 75px;
+            display: block;
         }
 
         #desc{
@@ -134,20 +99,35 @@
             margin-bottom: 10px;
         }
 
-        #links{
+        .links{
             display: block;
             width: 100%;
             text-align: center;
         }
 
-        #links ul li a{
+        .links ul li a{
             margin: 0;
         }
 
-        #links ul li a.first{
+        .links ul li a.first{
             margin: 0 30px 0 0;
         }
 
+        #column-left, #column-right{
+            display: none;
+        }
+
+        #column-center{
+            width: 100%;
+        }
+
+        #archive-items li {
+        padding: 0 15px 5px 0;
+        }
+
+        .body-copy{
+            font-size: .9em;
+        }
     }
 
 
@@ -156,10 +136,17 @@
 
     @media only screen and (min-width: 414px) and (max-width: 737px){
          #container{
-            width: 100%;
+            width: 85%;
             margin: auto;
             padding: 50px 0;
         }
+        .links{
+            font-size: 1.2em;
+        }
+        #nav{
+            margin-bottom: 100px;
+        }
+
     }
 
 
@@ -168,7 +155,7 @@
 
     @media only screen and (max-width: 320px){
          #container{
-            width: 100%;
+            width: 85%;
             margin: auto;
             padding: 50px 0;
         }
